# sahara-specs

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  redirect.py
specs/: backlog_idx.rst  juno_idx.rst  kilo_idx.rst  liberty_idx.rst  mitaka_idx.rst  newton_idx.rst  ocata_idx.rst  pike_idx.rst  queens_idx.rst  rocky_idx.rst  sahara-image-elements_idx.rst  sahara-tests_idx.rst  saharaclient_idx.rst  template.rst
specs/backlog/: api-v2-experimental-impl.rst  boot-from-volume.rst  chronic-edp-revival.rst  cli-import-export.rst  cluster-suspend-resume.rst
specs/juno/: anti-affinity-via-server-groups.rst  append-to-remote-file.rst  cdh-plugin.rst  ceilometer-integration.rst  cluster-secgroups.rst  edp-move-examples.rst  edp-refactor-job-manager.rst  edp-spark-job-type.rst  edp-swift-trust-authentication.rst  error-handling-in-provisioning.rst  placeholder.rst  redirects  storm-integration.rst
specs/kilo/: add-lib-subset-cm-api.rst  add-more-cdh-services.rst  add-service-test-in-integration.rst  add-timeouts-for-polling.rst  adding-ids-to-logs.rst  auth-policy.rst  cdh-hbase-support.rst  cdh-version-management.rst  cdh-zookeeper-support  cdh-zookeeper-support.rst  cluster-creation-with-trust.rst  default-templates.rst  development-environment-vagrant.rst  drop-hadoop-2.3-support.rst  edp-add-hbase-sharelib.rst  edp-add-oozie-shell-action.rst  edp-add-spark-shell-action.rst  edp-api-json-samples.rst  (+30 more)
tests/: test_placeholder.py  test_titles.py
(+80 files in other folders)
