[metadata]
name = sahara-specs
summary = OpenStack Sahara Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://specs.openstack.org/openstack/sahara-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[pbr]
warnerrors = True

[wheel]
universal = 1
