[metadata]
name = sahara-specs
summary = OpenStack Sahara Project Development Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://specs.openstack.org/openstack/sahara-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
